add docs for login route
